--- a/src/sass/header-myLibrary/_librarry.scss
+++ b/src/sass/header-myLibrary/_librarry.scss
@@ -4,14 +4,14 @@
 .header-library {
   margin-right: auto;
   margin-left: auto;
-  padding-right: 20px;
-  padding-left: 20px;
-  padding-top: 40px;
-  padding-bottom: 62px;
+  // padding-right: 20px;
+  // padding-left: 20px;
+  // padding-top: 40px;
+  // padding-bottom: 62px;
 
   @media screen and (min-width: $mobile) {
-    padding-top: 40px;
-    padding-bottom: 62px;
+    // padding-top: 40px;
+    // padding-bottom: 62px;
     height: 230px;
   }
   background: rgba(0, 0, 0, 0.56);
@@ -117,7 +117,7 @@
 }
 .header-library__btn {
   padding: 14px 36px 12px 36px;
-  margin-top: 60px;
+  // margin-top: 60px;
 
   font-family: 'Roboto';
   font-style: normal;
@@ -132,7 +132,7 @@
   background-color: transparent;
   border-color: #fff;
   @media screen and (min-width: $tablet) {
-    margin-top: 40px;
+    // margin-top: 40px;
     width: 152px;
     height: 44px;
     margin-right: 32px;
@@ -158,6 +158,7 @@
 .nav-library {
   display: flex;
   align-items: center;
+  padding: 40px 20px 40px 20px;
 }
 .header-library__list {
   display: flex;
