--- a/src/sass/layouts/_collection-item.scss
+++ b/src/sass/layouts/_collection-item.scss
@@ -1,4 +1,5 @@
 .card__item {
+  border-radius: 5px;
   list-style-type: none;
   height: 440px;
   opacity: 1;
@@ -7,8 +8,8 @@
 
   &:hover,
   &:focus {
-    box-shadow: (7px -7px 21px rgba(255, 107, 1, 0.6));
     opacity: 0.9;
+    transform: scale(1.025);
   }
 }
 
