--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,5 +1,5 @@
 <section class="main__section">
-  <h2 class="visually-hidden">Filmoteka</h2>
+  <h1 class="visually-hidden">FilmotekaVeka</h1>
   <div class="container container__main--content">
     <ul class="container__main"></ul>
     <div class="pagination">
